# liquidhaskell-exercises

./: .gitignore  README.md
Session18/: session18.cabal
Session18/src/: Intro.lhs  Lists.hs
Session19/: session19.cabal
Session19/src/: measures.lhs  trees.hs
Session20/: session20.cabal
Session20/src/: numericmeasures.lhs
Session21/: package.yaml  session21.cabal
Session21/src/: sets.lhs
